--- a/explain/index.html
+++ b/explain/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="icon" href="../icon.ico" type="image/x-icon" />
 <title>電卓アプリケーション</title>
 <style>
 body {
@@ -153,7 +154,7 @@ th {
 <td>9乗</td>
 </tr>
 </table>
-<p>Copyright© kabuchin All rights reserved.</p> <!-- コピーライト表記を追加 -->
+<p style="font-size: small; text-align: right;">Copyright© <a href="https://23o7.site/">Kabuchin</a> All rights reserved.</p>
 </div>
 </body>
 </html>
