--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" href="icon.ico" type="image/x-icon" />
 <title>電卓アプリ</title>
 <style>
 body {
@@ -85,7 +86,7 @@ button {
 <button onclick="appendOperator('+')">+</button>
 <p style="font-size: small;">注意: 関数を使用する際は、関数名の後に数値を入れるカギ括弧が必要です（例：√(2)）。また、2√2のような計算を行う際には、2×√(2)のように表記してください。<br><a href="https://d.23o7.net/explain/">電卓の説明を読む</a>
 </p>
-<p style="font-size: small; text-align: right;">Copyright© <a href="https://github.com/kabuchin">Kabuchin</a> All rights reserved.</p>
+<p style="font-size: small; text-align: right;">Copyright© <a href="https://23o7.site/">Kabuchin</a> All rights reserved.</p>
 </div>
 <script>
 var input = document.getElementById('result');
