--- a/explain/index.html
+++ b/explain/index.html
@@ -77,7 +77,7 @@ th {
 <div class="container">
 <div class="header">
 <h1>電卓アプリ</h1>
-<a href="https://kabuchin.github.io/dentaku/" class="back-button">電卓アプリに戻る</a>
+<a href="../" class="back-button">電卓アプリに戻る</a>
 </div>
 <p>この電卓アプリケーションでは、基本的な算術演算だけでなく、幾つかの高度な機能も利用できます。以下に主な機能とショートカットキーをまとめました。</p>
 
