--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <button onclick="appendOperator('+')">+</button>
     <p style="font-size: small;">注意: 関数を使用する際は、関数名の後に数値を入れるカギ括弧が必要です（例：√(2)）。また、2√2のような計算を行う際には、2×√(2)のように表記してください。<br><a href="./explain/">電卓の説明を読む</a>
     </p>
-    <p style="font-size: small; text-align: right;">Copyright© <a href="https://23o7.site/">Kabuchin</a> All rights reserved.</p>
+    <p style="font-size: small; text-align: right;">Copyright© <a href="https://kabuchin.github.io/dentaku/">Kabuchin</a> All rights reserved.</p>
   </div>
   <script>
     var input = document.getElementById('result');
